--- a/因果推断/DID_demo.ipynb
+++ b/因果推断/DID_demo.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "import sys \n",
-    "sys.path.append('/home/public/benyuansong') \n",
+    "sys.path.append('/home/public/') \n",
     "from DID import did\n",
     "from DID import ttest\n",
     "from DID import preprocessing\n",
